--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
+            <div class="mylearning">
             <p>My Learning</p>
+            <div class="mylearning__popup">
+                <p>You did not purchace anything yet</p>
+            </div>
+        </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
 
-
+        
 
         </div>
 
@@ -50,7 +55,11 @@
 
     </div>
     <div class="sale-image">
-        <img src="./image/sectionimg.jpeg" alt="sele-image">
+        <img src="./image/sectionimg.jpeg" alt="sale-image">
+    </div>
+    <div class="sale-image__sale">
+        <h3>Udemy Flash sale ! 24 hours to save</h3>
+        <p>Get the top coure for just 499 Just one day to save but a lifetime to learn</p>
     </div>
 
     <div class="recommended">
@@ -168,31 +177,31 @@
         </div>
     </div>
     <div class="footer">
-    <div class="footer__one">
-        <div class="footer__one__s1">
-        <p>Udemy Bussiness</p>
-        <p>Teach on Udumy</p>
-        <p>Get the app</p>
-        <p>About Us</p>
-        <p>Contact Us</p>
-        <p></p>
-    </div>
-    <div class="footer__one__s2">
-        <p>Careers</p>
-        <p>Blog</p>
-        <p>Help and Support</p>
-        <p>Affilate</p>
-        <p>Inventors</p>
-       
-    </div>
+        <div class="footer__one">
+            <div class="footer__one__s1">
+                <p>Udemy Bussiness</p>
+                <p>Teach on Udumy</p>
+                <p>Get the app</p>
+                <p>About Us</p>
+                <p>Contact Us</p>
+                <p></p>
+            </div>
+            <div class="footer__one__s2">
+                <p>Careers</p>
+                <p>Blog</p>
+                <p>Help and Support</p>
+                <p>Affilate</p>
+                <p>Inventors</p>
+
+            </div>
 
 
+        </div>
+        <div class=footer__two>
+            <h1>Udemy</h1>
+            <p>&copy; Udemy,Inc</p>
+        </div>
     </div>
-    <div class=footer__two>
-        <h1>Udemy</h1>
-        <p>&copy; Udemy,Inc</p>
-    </div>
-</div>
 </body>
 
 </html>
