--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar__s2">
             <i class="fa-sharp fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-            <input placeholder="Search for aything here. Tech, BUsiness,Art....">
+            <input placeholder="Search for aything here. Tech, Business,Art....">
 
         </div>
         <div class="navbar__s3">
@@ -44,11 +44,14 @@
 
         </div>
 
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars" style="color: #000000;"></i>
+        </div>
     </div>
     <div class="categories">
         <p>Devlopment</p>
         <p>Bussiness</p>
-        <p>IT& Software</p>
+        <p>IT & Software</p>
         <p>Personal Devolpment</p>
         <p>Design</p>
         <p>Marketing</p>
